--- a/src/components/HeroCard/HeroCard.module.scss
+++ b/src/components/HeroCard/HeroCard.module.scss
@@ -1,6 +1,12 @@
-$cardWidth: 480px;
+$cardWidth: 450px;
 $borderColor: #dee2e6;
 
+img {
+  width: $cardWidth;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  height: 500px;
+}
 .cardWrapper {
   display: flex;
   flex-direction: column;
@@ -19,6 +25,8 @@ $borderColor: #dee2e6;
   width: $cardWidth;
   border: 1px solid $borderColor;
   border-top: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   h2 {
     margin: 20px;
     text-align: center;
@@ -29,13 +37,7 @@ $borderColor: #dee2e6;
   flex-direction: column;
   gap: 1rem;
 }
-.cardFooter {
-  width: $cardWidth;
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-  margin: 10px;
-}
+
 li {
   display: flex;
   flex-direction: row;
@@ -47,5 +49,14 @@ li {
   }
   span {
     align-self: center;
+  }
+}
+@media (min-width: 1000px) {
+  img {
+    width: 488px;
+    height: 600px;
+  }
+  .articleBody {
+    width: 488px;
   }
 }
