--- a/src/components/HeroCard/HeroCard.module.scss
+++ b/src/components/HeroCard/HeroCard.module.scss
@@ -1,7 +1,11 @@
 $cardWidth: 450px;
 $borderColor: #dee2e6;
 
-img {
+.statImg {
+  width: 30px;
+}
+
+.cardImg {
   width: $cardWidth;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -24,35 +28,30 @@ img {
   flex-direction: column;
   width: $cardWidth;
   border: 1px solid $borderColor;
-  border-top: none;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   h2 {
-    margin: 20px;
+    margin-bottom: 3rem;
     text-align: center;
+    font-size: 30px;
+    font-weight: 500;
   }
 }
 .cardAttrs {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   gap: 1rem;
+  padding-bottom: 2rem;
 }
 
-li {
+.powerstat {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 1rem;
-  border-top: 1px solid $borderColor;
-  p,
-  span {
-    margin: 10px;
-  }
-  span {
-    align-self: center;
-  }
+  align-items: center;
 }
 @media (min-width: 1000px) {
-  img {
+  .cardImg {
     width: 488px;
     height: 600px;
   }
