--- a/src/components/HeroDetailed/HeroDetailed.module.scss
+++ b/src/components/HeroDetailed/HeroDetailed.module.scss
@@ -17,8 +17,10 @@
   width: 100%;
   h1 {
     text-align: center;
-    font-size: 35px;
+    font-size: 40px;
     font-weight: 500;
+    margin: 1.5rem 0;
+    margin-top: 2rem;
   }
 }
 
@@ -36,6 +38,9 @@
   display: flex;
   flex-direction: row;
   gap: 2rem;
+  img {
+    border-radius: 15px;
+  }
   .heroData {
     .heroPowerstats {
       display: flex;
@@ -53,6 +58,8 @@
         border: none;
         padding: 0.5rem 1rem;
       }
+      display: flex;
+      gap: 4rem;
     }
   }
 }
