--- a/src/components/HeroDetailed/HeroDetailed.module.scss
+++ b/src/components/HeroDetailed/HeroDetailed.module.scss
@@ -23,20 +23,9 @@
     margin-top: 2rem;
   }
 }
-
-.statImg {
-  width: 40px;
-}
-
-.powerstat {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
-}
 .heroInfo {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 2rem;
   img {
     border-radius: 15px;
@@ -62,4 +51,20 @@
       gap: 4rem;
     }
   }
+}
+@media (min-width: 900px) {
+  .heroInfo {
+    flex-direction: row;
+  }
+}
+
+.statImg {
+  width: 40px;
+}
+
+.powerstat {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
 }
