--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -33,7 +33,13 @@
 
   button {
     height: 30px;
-    padding: 3px 5px;
-    border-radius: 8px;
+    padding: 3px 7px;
+    border: none;
+    border-radius: 10px;
+    transition: 0.5s ease-out;
+    &:hover {
+      background-color: black;
+      color: white;
+    }
   }
 }
