--- a/src/components/HeroCard/HeroCard.module.scss
+++ b/src/components/HeroCard/HeroCard.module.scss
@@ -1,4 +1,4 @@
-$cardWidth: 360px;
+$cardWidth: 320px;
 $borderColor: #dee2e6;
 
 .statImg {
@@ -28,7 +28,6 @@ $borderColor: #dee2e6;
   display: flex;
   flex-direction: column;
   width: $cardWidth;
-  border: 1px solid $borderColor;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   h2 {
@@ -53,19 +52,19 @@ $borderColor: #dee2e6;
 }
 @media (min-width: 1000px) {
   .cardImg {
-    width: 488px !important;
-    height: 600px !important;
-  }
-  .articleBody {
-    width: 488px !important;
+    width: 488px;
   }
 }
 @media (min-width: 800px) {
   .cardImg {
-    width: 450x !important;
-    height: 600px !important;
+    width: 450x;
+  }
+}
+@media (min-width: 600px) {
+  .cardImg {
+    width: 360x;
   }
   .articleBody {
-    width: 450px !important;
+    width: 360px;
   }
 }
