--- a/src/components/SearchView/SearchView.module.scss
+++ b/src/components/SearchView/SearchView.module.scss
@@ -11,3 +11,24 @@
   align-items: center;
   height: 500px;
 }
+.errorMessage {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  button {
+    padding: 0.75rem 1.5rem;
+    border: none;
+    font-size: 20px;
+    border-radius: 10px;
+    background-color: lightgreen;
+    color: white;
+  }
+  h1 {
+    font-size: 25px;
+    text-align: center;
+  }
+}
